tests/gen-test/test_out/swap-macro-parse-out.txt
error: expected 'struct' | 'fn' | 'spec' | 'enum' | 'impl' | '#' but got Macro
 --> swap-macro\root.ctl:1:838
  |
1 | use { "water/option" ; "water/macros/tokens" ; } ; struct LastToken { last : MacroToken ; } ; struct TwoTokens { second : MacroToken ; first : MacroToken ; } ; enum SwapState { Two : TwoTokens ; Last : LastToken ; Empty ; } ; #[macro swap] ; struct Swap { state : SwapState ; lexer : MacroLexer ; } ; impl TokenMacro for Swap {     fn new(s : ^ Self, lexer : MacroLexer)     {         * s =\        {             state :\Two ~\            { first : lexer.next() ; second : lexer.next() ; } ; lexer ;         } ;     } ; fn next(s : ^ Self) -> Option [MacroToken] =>\Some ~ match s.state     {        \Two ~\{ first, second }         { s.state =\Last ~\{ last : first } ; second } ;\Last ~\        { last } { s.state =\Empty ; last } ;\Empty => return\None ;     } ; fn drop(s : ^ Self) -> MacroLexer { s.lexer } ; } ; break ; #[entry] ; swap! swap! fn -> main uint => 0 ;
  |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      ^^^^^ token located here
  |
  = info: list -> item

